--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site for William Hunt, DDS"
+      content="Forest City, North Carolina Dentist, Dr. William Hunt, provides family & cosmetic dentistry in Forest City NC near Rutherfordton, Spindale, and Bostic. Call now to book your family dental appointment!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>William Hunt DDS</title>
+    <title>Family Dentist in Forest City, NC | Dentistry in Forest City | General & Cosmetic | William Hunt, DDS</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
