--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,13 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <!-- <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Forest City, North Carolina Dentist, Dr. William Hunt, provides family & cosmetic dentistry in Forest City NC near Rutherfordton, Spindale, and Bostic. Call now to book your family dental appointment!"
-    />
+    /> -->
+    <meta name="description" content="Dr. William Hunt is a trusted family dentist serving Forest City, North Carolina, and the surrounding areas. With over 40 years of experience, Dr. Hunt is dedicated to providing the highest quality dental care for patients of all ages. From routine cleanings and fillings to advanced cosmetic procedures, our friendly and skilled team is committed to your oral health. Schedule an appointment with Dr. William Hunt, your reliable family dentist in Forest City, NC.">
+    <meta name="keywords" content="family dentist, Dr. William Hunt, Forest City, North Carolina, dental care, routine cleanings, fillings, cosmetic procedures, oral health, appointments">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Family Dentist in Forest City, NC | Dentistry in Forest City | General & Cosmetic | William Hunt, DDS</title>
+    <title>Dr. William Hunt - Trusted Family Dentist in Forest City, NC</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
