added new meta tag

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     /> -->
     <meta name="description" content="Dr. William Hunt is a trusted family dentist serving Forest City, North Carolina, and the surrounding areas. With over 40 years of experience, Dr. Hunt is dedicated to providing the highest quality dental care for patients of all ages. From routine cleanings and fillings to advanced cosmetic procedures, our friendly and skilled team is committed to your oral health. Schedule an appointment with Dr. William Hunt, your reliable family dentist in Forest City, NC.">
     <meta name="keywords" content="family dentist, Dr. William Hunt, Forest City, North Carolina, dental care, routine cleanings, fillings, cosmetic procedures, oral health, appointments">
+    <meta name="insurance" content="We do not accept medicaid"
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
